@@ -222,6 +222,8 @@ if [ -z "$CATALINA_TMPDIR" ] ; then
   CATALINA_TMPDIR="$CATALINA_BASE"/temp
 fi
 
+CLASSPATH="$CLASSPATH":"$CATALINA_HOME"/bin/crac.jar
+
 # Add tomcat-juli.jar to classpath
 # tomcat-juli.jar can be over-ridden per instance
 if [ -r "$CATALINA_BASE/bin/tomcat-juli.jar" ] ; then
@@ -611,6 +613,43 @@ elif [ "$1" = "configtest" ] ; then
         echo "Configuration error detected!"
     fi
     exit $result
+
+elif [ "$1" = "checkpoint" ]; then
+  shift
+
+  CRPATH=$CATALINA_HOME/cr
+  CRARG="\"-XX:CRaCCheckpointTo=$CRPATH\""
+
+  if [ "$1" = "-security" ] ; then
+    if [ $have_tty -eq 1 ]; then
+      echo "Using Security Manager"
+    fi
+    shift
+    eval exec "\"$_RUNJAVA\"" "$CRARG" "\"$LOGGING_CONFIG\"" $LOGGING_MANAGER $JAVA_OPTS $CATALINA_OPTS \
+      -D$ENDORSED_PROP="\"$JAVA_ENDORSED_DIRS\"" \
+      -classpath "\"$CLASSPATH\"" \
+      -Djava.security.manager \
+      -Djava.security.policy=="\"$CATALINA_BASE/conf/catalina.policy\"" \
+      -Dcatalina.base="\"$CATALINA_BASE\"" \
+      -Dcatalina.home="\"$CATALINA_HOME\"" \
+      -Djava.io.tmpdir="\"$CATALINA_TMPDIR\"" \
+      org.apache.catalina.startup.Bootstrap "$@" checkpoint
+  else
+    eval exec "\"$_RUNJAVA\"" "$CRARG" "\"$LOGGING_CONFIG\"" $LOGGING_MANAGER $JAVA_OPTS $CATALINA_OPTS \
+      -D$ENDORSED_PROP="\"$JAVA_ENDORSED_DIRS\"" \
+      -classpath "\"$CLASSPATH\"" \
+      -Dcatalina.base="\"$CATALINA_BASE\"" \
+      -Dcatalina.home="\"$CATALINA_HOME\"" \
+      -Djava.io.tmpdir="\"$CATALINA_TMPDIR\"" \
+      org.apache.catalina.startup.Bootstrap "$@" checkpoint
+  fi
+
+elif [ "$1" = "restore" ]; then
+  shift
+
+  CRPATH=$CATALINA_HOME/cr
+
+  eval exec "\"$_RUNJAVA\"" -XX:CRaCRestoreFrom=$CRPATH
 
 elif [ "$1" = "version" ] ; then
 
